tests/ui/parser/issue-101477-let.rs
// run-crablangfix

fn main() {
    let x == 2; //~ ERROR unexpected `==`
    println!("x: {}", x)
}
